increased the slider movement to 105% to solve the left gap issue

--- a/destacados.css
+++ b/destacados.css
@@ -1,6 +1,7 @@
     *{
         padding: 0;
         margin: 0;
+        box-sizing: border-box;
     }
     .promo__next {
         position: absolute;
